<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ulb</groupId>
  <artifactId>MusicApp_groupe2</artifactId>
  <version>0.1</version>
  <name>MusicApp_groupe2</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>gluon-releases</id>
      <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
    </repository>
    <!-- Maven Central is used by default, but added here explicitly -->
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- JUnit for testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <!-- JavaFX dependencies (all using the stable version 23.0.2) -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>23.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>23.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-media</artifactId>
      <version>23.0.2</version>
    </dependency>
    <!-- Additional dependencies -->
    <dependency>
      <groupId>com.gluonhq</groupId>
      <artifactId>charm-glisten</artifactId>
      <version>6.1.0</version>
    </dependency>
    <dependency>
      <groupId>com.gluonhq.attach</groupId>
      <artifactId>display</artifactId>
      <version>4.0.11</version>
    </dependency>
    <dependency>
      <groupId>com.gluonhq.attach</groupId>
      <artifactId>lifecycle</artifactId>
      <version>4.0.11</version>
    </dependency>

    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.16-alpha</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit</artifactId>
      <version>4.0.15-alpha</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>net.jthink</groupId>
      <artifactId>jaudiotagger</artifactId>
      <version>3.0.1</version>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <!-- Maven Compiler Plugin -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
<!--        <configuration>-->
<!--          <source>23</source>-->
<!--          <target>23</target>-->
<!--        </configuration>-->
      </plugin>
      <!-- Maven Surefire Plugin -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
      </plugin>
      <!-- Maven Shade Plugin for creating an uber JAR with all dependencies -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.2</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>MusicApp.MainLauncher</mainClass>
                </transformer>
                <!-- Merge service files if any -->
                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
              </transformers>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <!-- Maven Clean Plugin -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- Maven Resources Plugin -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <!-- Exec Maven Plugin with VM options -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
            <mainClass>MusicApp.MainLauncher</mainClass>
            <arguments>
              <argument>--module-path</argument>
              <!-- Replace [module-path-value] with your actual module path -->
              <argument>[module-path-value]</argument>
              <argument>--add-modules</argument>
              <argument>javafx.controls,javafx.fxml</argument>
              <argument>--add-opens=javafx.base/com.sun.javafx=ALL-UNNAMED</argument>
              <argument>--add-opens=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED</argument>
              <argument>--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</argument>
            </arguments>
          </configuration>
        </plugin>
        <!-- Maven Jar Plugin -->
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.0</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <mainClass>MusicApp.MainLauncher</mainClass>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <!-- Maven Install Plugin -->
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <!-- Maven Deploy Plugin -->
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- Maven Site Plugin -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <!-- Maven Project Info Reports Plugin -->
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>